Changing Grease Pencil Layer in Dopesheet unlocks all layers #69597

Closed
opened 2019-09-06 20:05:46 +02:00 by Bun ny · 3 comments

System Information
Operating system: Windows 7 x64
Graphics card: NVIDIA GeForce GTX 580

Blender Version
Broken: 7cec119c57

Short description of error
Changing the Grease Pencil Layer in the Dopesheet unlocks all layers. Small bug in the much needed fix 1abb1ba9a3

Exact steps for others to reproduce the error
Open attached file, click on either layer in the Dopesheet. Or create new file, create Grease Pencil object, create multiple layers, lock all layers, click on any layer in the Dopesheet.

gpencil_lock_bug.blend

**System Information** Operating system: Windows 7 x64 Graphics card: NVIDIA GeForce GTX 580 **Blender Version** Broken: 7cec119c576b **Short description of error** Changing the Grease Pencil Layer in the Dopesheet unlocks all layers. Small bug in the much needed fix 1abb1ba9a3 **Exact steps for others to reproduce the error** Open attached file, click on either layer in the Dopesheet. Or create new file, create Grease Pencil object, create multiple layers, lock all layers, click on any layer in the Dopesheet. [gpencil_lock_bug.blend](https://archive.blender.org/developer/F7720032/gpencil_lock_bug.blend)
Author

Added subscriber: @bunny

Added subscriber: @bunny

This issue was referenced by bbcb4be04f

This issue was referenced by bbcb4be04fd468b8a93d919b4fc50767817ef701

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Antonio Vazquez self-assigned this 2019-09-06 23:33:38 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#69597
No description provided.