Fix T69597: Changing Grease Pencil Layer in Dopesheet unlocks all layers

The Dopesheet was unlocked all layers because it was using the same logic used in UI panel, but this was wrong.